--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>		
-        <title>Sua ferramenta de pesquisa no Youtube</title>
-        <meta charset="UTF-8" />					
+    <head>
+        <title>Your awesome Youtube search engine</title>
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Videos incriveis!" />
+        <meta name="description" content="Awesome videos!" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h1 class="w100 text-center"><a href="index.html">YouTube Search</a></h1>
+            <h1 class="w100 text-center"><a href="index.html">YouTube Viral Search</a></h1>
         </header>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -21,10 +21,15 @@
                 <div id="results"></div>
             </div>
         </div>
-        
-        <!-- scripts -->
+        <div id="app">
+  <p>{{ Bem vindo ao youtube viral }}</p>
+  <button v-on:click="reverseMessage"> Test </button>
+</div>
+
+        <!-- scripts // Vue.js é um pequeno framework JavaScript. -->
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script src="js/app.js"></script>
-        <script src="https://apis.google.com/js/client.js?onload=init"></script>
+        <script src="app.js"></script>
+        <script src="js/vue.js"></script>
+        <script src="https://apis.google.com/js/client.js"></script>
     </body>
 </html>
